--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@types/googlemaps": "^3.39.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.2.1",
+    "ckeditor4-angular": "^1.0.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ng2-ckeditor": "^1.2.6",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
