--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@types/googlemaps": "^3.39.0",
     "angular-font-awesome": "^3.1.2",
+    "angular-mentions": "^1.1.6",
     "bootstrap": "^4.2.1",
     "ckeditor4-angular": "^1.0.1",
     "core-js": "^2.5.4",
