--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
               "src/color.css",
               "src/gtTheme.css",
               "./node_modules/font-awesome/css/font-awesome.min.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              /*"./node_modules/@icon/themify-icons/themify-icons.css"*/
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
