--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ng2-ckeditor": "^1.2.6",
+    "ngx-device-detector": "^1.4.5",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.5",
     "tslib": "^1.9.0",
