--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
-    "@angular/cdk": "^7.0.0",
-    "@angular/cli": "^7.2.0",
+    "@angular/cdk": "^7.3.3",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -30,12 +29,11 @@
     "angular-ng-autocomplete": "^2.0.1",
     "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.2.1",
-    "ckeditor4-angular": "^1.0.1",
+    "ckeditor4-angular": "1.2.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "ng2-ckeditor": "^1.2.6",
-    "ngx-chips": "^2.1.0",
-    "ngx-device-detector": "^1.4.5",
+    "ngx-chips": "2.0.2",
+    "ngx-device-detector": "^1.3.5",
     "ngx-emoji-picker": "0.0.2",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
@@ -43,8 +41,8 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "~7.2.2",
+    "@angular-devkit/build-angular": "~0.12.4",
+    "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/node": "~8.9.4",
