--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gpx-ui",
-  "version": "0.0.0",
+  "version": "1.0.0.04022021",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
