--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,30 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "prodlocal": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prodlocal.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
             }
           }
         },
@@ -67,6 +91,9 @@
           "configurations": {
             "production": {
               "browserTarget": "gpx-ui:build:production"
+            },
+            "prodlocal": {
+              "browserTarget": "gpx-ui:build:prodlocal"
             }
           }
         },
@@ -121,6 +148,9 @@
           "configurations": {
             "production": {
               "devServerTarget": "gpx-ui:serve:production"
+            },
+            "prodlocal": {
+              "devServerTarget": "gpx-ui:serve:prodlocal"
             }
           }
         },
