--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gpx-ui",
-  "version": "1.0.0.07302021",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -33,7 +33,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ngx-chips": "2.0.2",
-    "ngx-device-detector": "^1.4.5",
+    "ngx-device-detector": "^1.3.20",
     "ngx-emoji-picker": "0.0.2",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
@@ -45,9 +45,9 @@
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -59,6 +59,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "3.1.1"
   }
 }
