--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.0.3",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -32,9 +33,11 @@
     "ckeditor4-angular": "1.2.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ngx-chips": "2.0.2",
     "ngx-device-detector": "^1.3.20",
     "ngx-emoji-picker": "0.0.2",
+    "node-sass": "^4.14.1",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
     "tslib": "^1.9.0",
